Fix navbar landscape orientation on mobile

--- a/src/styles/layout/layout.module.scss
+++ b/src/styles/layout/layout.module.scss
@@ -20,6 +20,10 @@
     height: $headband-height;
     background-color: $primary-color;
   }
+
+  &[nav=open] {
+    overflow: hidden;
+  }
 }
 
 .container {
